# qeditor

./: .rustfmt.toml  Cargo.toml  README.md
assets/blueprints/: qphysics.md
assets/save/: default.json
src/: main.rs  util.rs
src/camera/: components.rs  mod.rs  plugin.rs  systems.rs
src/collision_detection/: components.rs  mod.rs  plugin.rs  resources.rs  systems.rs
src/coordinate/: mod.rs  plugin.rs  resources.rs  systems.rs
src/qphysics/: components.rs  messages.rs  mod.rs  plugin.rs  resources.rs  systems.rs
src/save_load/: components.rs  mod.rs  plugin.rs  systems.rs
src/shapes/: components.rs  mod.rs  plugin.rs  resources.rs  systems.rs
src/ui/: mod.rs  plugin.rs  resources.rs  systems.rs
